--- a/packages/renderer/src/styles/css/global.css
+++ b/packages/renderer/src/styles/css/global.css
@@ -15,7 +15,14 @@ body,
 	}
 }
 
-@media only screen and (min-width: 751px) {
+@media only screen and (mix-width: 751px) {
+	/* For mobile phones: */
+	body {
+		font-size: 30px;
+	}
+}
+
+@media only screen and (min-width: 1001px) {
 	/* For mobile phones: */
 	body {
 		font-size: 50px;
